--- a/EMR WEB UPD/theabt.css
+++ b/EMR WEB UPD/theabt.css
@@ -3,8 +3,8 @@
     margin: 0;
     box-sizing: border-box;
     font-family: "Saira Condensed", sans-serif;
-  font-weight: 500;
-  font-style: normal;
+    font-weight: 500;
+    font-style: normal;
 }
 body{
   background: whitesmoke;
@@ -80,146 +80,65 @@ nav{
     border-radius: 0;
     text-align: left;
 }
-.navlink li:hover .dropdown ul li a:hover{
-    color: darkgray
-}
+.navlink li:hover .dropdown ul li a:hover[
+    color: darkgray;
+]
+    
 .header{
     
-    text-align: center; 
-    background: green;
-    color: white; 
-    width: auto;
-    border-radius: 5px;
-    height: 10vh;
 }
-marquee{
-    font-size: 25px;
-    color: white;
-    border-bottom: 3px;
+.header h2{
+    text-align: center;
+    background: url(/images/slider31.png);
+    padding: 55px 55px;
+}
+.header img{
+    height: 30vh;
+    width: 100%;
+}
+.section{
+    width: 100%;
+    height: 100vh;
+    background-color: #ddd;
+    margin-bottom: -30px;
 }
 .container{
-    width: 100%;
-    height: 50vh;
-    margin-top: 80px;
-    border: 1px solid white;
-    box-shadow:0 3px 5px black ;
-    border-radius: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: -1;
-    
+    width: 80%;
+    display: block;
+    margin: auto;
+    padding-top: 100px;
 }
-.swiper{
-    width: 100%;
-    height: fit-content;
-    
-  }
-.swiper-slide img{
-    width: 100%;
-    border: 8px groove white;
-    border-radius: 12px;
-    
-  }
-.swiper .swiper-button-prev, .swiper .swiper-button-next{
-    color: whitesmoke;
-  }
-.swiper .swiper-pagination-bullet-active{
-    color: white;
-  }
-  article1{
-    display: inline-block;
-    margin-left: 120px;
-    margin: 0;
-    background-color: rgb(10, 94, 10);
-    color: white;
-    width: 400px;
-    padding-left: 10px;
-    text-align: center;
-    border: 4px solid whitesmoke;
-    box-shadow: 0 0 15px 0 black;
+.content-section{
+    float: left;
+    width: 55%;
+    margin-left: -100px;
+    margin-right: 220px;
+}
+.content-section h1{
+    text-transform: uppercase;
+    font-size: 28px;
+    color: green;
+}
+.content-section p{
+    margin-top: 20px;
+    font-family: sans-serif;
+    font-size: 17px;
+    line-height: 1.5;
 
 }
-.art{
-    display: flex;
-    margin-top: 90px;
-    height: 45vh;
-    padding-left: 1px;
-    border: 90px;
-    justify-content: center;
-}
-article1 h2{
-    padding-bottom: 20px;
-    padding-top: 10px;
-    text-align: center;
+.image-content{
+    float: right;
+    width 40px; 
     
 }
-article1 p{
-    padding-bottom: 20px;
-    line-height: 20px;
-    font-weight: 300;
-    font-size: large;
-    
+.image-content img{
+    width: 100%;
+    height: 70vh;
+    margin-top: -400px;
+    margin-bottom: 20px;
+    box-shadow:0 3px 20px black ;
 }
-.middle{
-    background: rgb(95, 151, 12);
-    padding-right: 9px;
-    
-}
-.middle p{
-    font-weight: 300;
-    font-size: large;
-}
-.kode-mono-uniquifier{
-    display: block;
-    font-family: "Kode Mono", monospace;
-    font-optical-sizing: auto;
-    font-style: normal;
-    color: green;
-    text-align: center;
-    font-weight: 500;
-    font-size: 55px;
-    
-  }
-  .wrapper{
-    text-align: center;
-    margin-top: 55px;
-    
-  }
-  .wrapper img{
-    display: inline-flex;
-    width: 200px;
-    height: 30vh;
-    border: 2px solid whitesmoke;
-    box-shadow: 0 0 15px 0 black;
-   
-    border-radius: 80px;
-    align-content: flex-start;
-    flex-wrap: wrap;
-  }
-  .wrapper img:hover{
-    border: 7px solid whitesmoke;
-    box-shadow: 0 0 15px 0 black;
-  }
-  .wrapper article{
-    text-align: center;
-    background-color: whitesmoke;
-    display: inline-block;
-    width: 250px;
-    margin: 30px
-  }
-  .wrapper article h5{
-    color: green;
-    text-align: center;
-    font-size: larger;
-    font-weight: bolder;
-    text-shadow: 0 0 15px 0 black;
-  }
-  .wrapper article p{
-    color: green;
-    text-align: center;
-  }
-  footer .wallpaper{
+footer .wallpaper{
     margin-top: 40px;
     background:url(/images/footer-back.jpg);
     border: none;
@@ -348,8 +267,6 @@ article1 p{
 .hamburger{
     display: none;
 }
-
-
 @media only screen and (max-width: 1080px){
     nav{
         position: fixed;
@@ -497,18 +414,33 @@ article1 p{
     }
     .navlink li a:hover{
         color: black;
+    } 
+    .container{
+        width: 80%;
+        display: block;
+        margin: auto;
+        padding-top: 50px;
     }
-
-}
-
-.toggle .line1{
-    transform: rotate(-45deg) translate(-5px,6px)
-}
-.toggle .line2{
-    transition: all 0.7s ease;
-    width:0;
- }
- .toggle .line3{
-    transform: rotate(45deg) translate(-5px,-6px);
- }
- 
+    .content-section{
+        float: none;
+        width: 100%;
+        display: block;
+        margin: auto;
+    }
+    .image-content{
+        float: none;
+        width: 100%;
+        display: block;
+        margin: auto;
+    }
+    .content-section .h1{
+        text-align: center;
+        font-size: 19px;
+    }
+    .content-section p{
+        font-size: 12px;
+    }
+    .image-content{
+        margin-top: 10px;
+    }
+   
